# kafka-repo

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yaml
src/: main.rs
