[package]
name = "kafka-repro"
version = "0.1.0"
authors = ["Heinz N. Gies <heinz@licenser.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = "0.24"
async-std = {version = "1.6.5", features = ["unstable", "attributes"]}
async-io = "1.1"
futures = "0.3"
smol = "*"